# graphify-swarm

./: .env  .env.example  .gitignore  .graphify.json  LICENSE  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  requirements.txt
.agents/skills/graphify/: SKILL.md
.github/: copilot-instructions.md
examples/: benchmark.md  with_graphify.md  without_graphify.md
graphify/: __init__.py  cli.py  config.py
graphify-out/: GRAPH_REPORT.md  chunks.jsonl  graph.html  graph.json  summaries.json
graphify/agents/: __init__.py  base.py  editor.py  reasoner.py  retriever.py  swarm.py  validator.py
graphify/graph/: __init__.py  builder.py  extractor.py  visualizer.py
graphify/indexer/: __init__.py  chunker.py  embedder.py  qdrant_store.py  walker.py
graphify/mcp/: server.py
graphify/memory/: episodic.py  evolution_engine.py  feedback_loop.py  memory_store.py
graphify/query/: __init__.py  llm.py  merger.py  router.py
