[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "graphify-local"
version = "0.1.0"
description = "Local code knowledge graph — index repos, search semantically"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "pathspec>=0.12.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
graphify = "graphify.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphify*"]
